# jetson-arena

./: .gitignore  .markdownlint-cli2.yaml  CHANGELOG.md  CLAUDE.md  README.md  culture.yaml  pyproject.toml  sonar-project.properties
.claude/: skills.local.yaml.example
.claude/skills/ask-colleague/: SKILL.md
.claude/skills/cicd/: SKILL.md
.claude/skills/communicate/: SKILL.md
.claude/skills/recall/: SKILL.md
.claude/skills/remember/: SKILL.md
.devague/: current_plan
.devague/frames/: jetson-arena-com-is-live-the-arena-s-public-site-b.json
.devague/plans/: jetson-arena-com-is-live-the-arena-s-public-site-b.json
.github/workflows/: deploy-site.yml  publish.yml  tests.yml
docs/: hosting-runbook.md  scope.md  site-sources.md  skill-sources.md
docs/plans/: 2026-07-14-jetson-arena-com-is-live-the-arena-s-public-site-b.md
docs/specs/: 2026-07-14-jetson-arena-com-is-live-the-arena-s-public-site-b.md
jetson_arena/: __init__.py  __main__.py
jetson_arena/cli/: __init__.py  _errors.py  _output.py
jetson_arena/cli/_commands/: cli.py  doctor.py  explain.py  learn.py  overview.py  whoami.py
jetson_arena/explain/: __init__.py  catalog.py
site-astro/: astro.config.mjs  package-lock.json  package.json
site-astro/scripts/: check-contrast.mjs
site-astro/src/components/: Footer.astro  Header.astro
site-astro/src/data/: site.ts  types.ts
site-astro/src/layouts/: Layout.astro
site-astro/src/pages/: 404.astro  arena.astro  index.astro
tests/: test_cli.py  test_cli_introspection.py
